mType/tests/testFiles/typeChecking/error/functionReturnTypeMismatchMethodIntToString.mt
class Calculator {
    function getValue(): int {
        return 42;
    }
}

Calculator calc = new Calculator();
string wrongValue = calc.getValue();  // Should fail